@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,1,14
-#define PRODUCTVER     0,3,1,14
-#define STRFILEVER     _T("0.3.1.14")
-#define STRPRODUCTVER  _T("0.3.1.14")
-#define STRPRODUCTDATE  _T("2008-03-12")
+#define FILEVER        0,3,1,15
+#define PRODUCTVER     0,3,1,15
+#define STRFILEVER     _T("0.3.1.15")
+#define STRPRODUCTVER  _T("0.3.1.15")
+#define STRPRODUCTDATE  _T("2008-03-18")
 #endif // AUTOBUILD_H
