@@ -171,6 +171,8 @@
 #define NSCA_PASSWORD_DEFAULT _T("")
 #define NSCA_DEBUG_THREADS _T("debug_threads")
 #define NSCA_DEBUG_THREADS_DEFAULT 1
+#define NSCA_CACHE_HOST _T("cache_hostname")
+#define NSCA_CACHE_HOST_DEFAULT 0
 
 #define C_SYSTEM_SVC_ALL_0 _T("check_all_services[SERVICE_BOOT_START]")
 #define C_SYSTEM_SVC_ALL_0_DEFAULT _T("ignored")
