@@ -6,6 +6,10 @@ TODO:
  * Improved socket performance (would be nice if we could be used as a "hub")
  * "The message is blocked by User Interface Privilege Isolation, Administrative applications that need to see it can allow it through by calling ChangeWindowMessageFilter after making sure the necessary security precautions are in place. "
 
+2007-03-20
+ + Added host-lookupos for NSCA server
+ + Added option (cache_hostname=1|0) to cache the NSCA host name (Ie. only lookup once)
+
 2007-03-18
  * Added some more error mesages to the NSCA module
  * Added support for srguments to LUA module.
